fixed Homepage Logo too big on mobile mode

--- a/designgraphique.css
+++ b/designgraphique.css
@@ -56,10 +56,6 @@ img {
 
     a {
         margin: 2em auto;
-        background-color: var(--green);
-        font-weight: bold;
-        color: white;
-        padding: 0.5em 1em;
         text-decoration: none;
         z-index: 2;
     }
@@ -101,7 +97,25 @@ img {
     }
 }
 
-
+#histoire {
+   
+    .bg-img {
+        width: 100%;
+        min-height: 30em;
+        z-index: 1;
+        opacity: 0.3;
+        position: absolute;
+        background: linear-gradient(to right, 
+            var(--peach) 0%,
+            var(--peach) 10%,
+            var(--peach) 80%,
+            rgba(249, 246, 244, 0) 100%
+        ), url('/assets/declinaison\ 1\ 0524\ .png');
+        background-size: 70% auto;
+        background-position: right center;
+        background-repeat: no-repeat;
+    }
+    }
 
 /* Services Section */
 #services {
@@ -136,7 +150,7 @@ img {
         padding: 5em;
         background-repeat: no-repeat;
         background-position: bottom;
-        height: 100%;
+        height: 30em;
         opacity: 0.8;
         width: 100%;
         position: absolute;
@@ -536,7 +550,16 @@ img {
     }
 }
 /* Mobile Navigation */
+@media screen and (max-width: 768px) {
+    #histoire{
+        .histoire-text{
+            border-radius: 25px;
+        }
+    }
+    
+}
 @media screen and (max-width: 767px) {
+    
     .burger {
         cursor: pointer;
         padding: 1rem;
@@ -618,7 +641,7 @@ img {
         .bg-img {
             background: linear-gradient(to bottom, 
                 rgba(255, 255, 255, 0) 0%,
-                var(--peach) 40%,
+                var(--peach) 90%,
                 var(--peach) 60%
             ), url('/assets/declinaison\ 1\ 0524\ .png');
             background-size: 100%;
